domainmodule/src/main/java/com/example/domainmodule/errors/IdentificaitonError.kt
package com.example.domainmodule.errors

sealed class IdentificationError(message: String) : Throwable(message) {
    class EmptyIdentifier(private val forType: String) : IdentificationError(forType)
}